# pymobileconfig

./: .gitignore  GEMINI.md  LICENSE  README.md  pyproject.toml  pyrightconfig.json
.github/workflows/: publish.yml  test.yml
src/pymobileconfig/: __init__.py  profile.py
src/pymobileconfig/payloads/: __init__.py  base.py  managed_app.py  pkcs12.py  scep.py  trusted_cert.py
tests/: test_payloads.py  test_profile.py
