[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pymobileconfig"
version = "0.1.0"
description = "Generate Apple mobileconfig configuration profiles"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["apple", "ios", "macos", "mdm", "mobileconfig", "intune", "scep"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/ZippyManaic/pymobileconfig"
Repository = "https://github.com/ZippyManaic/pymobileconfig"
Issues = "https://github.com/ZippyManaic/pymobileconfig/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pymobileconfig"]

[tool.pytest.ini_options]
testpaths = ["tests"]
